# MindDoc

./: .dockerignore  .env.example  .gitignore  AGENTS.md  package.json  pnpm-workspace.yaml  rust-toolchain.toml
backend_rs/: Cargo.toml  Dockerfile
backend_rs/crates/scy-shared/: Cargo.toml
backend_rs/crates/scy-shared/src/: config.rs  errors.rs  ids.rs  lib.rs  types.rs
backend_ts/: Dockerfile  package.json  tsconfig.json
backend_ts/src/: index.ts
docker/: docker-compose.dev.yml  docker-compose.yml
docker/livekit/: config.yaml
docker/nango/: .env.example
docker/perplexica/: .env.example
docker/searxng/: settings.yml
docs/: BUILD_COMMANDS.md  CODE_STYLE.md  DEPENDENCY_MANIFEST.md  PROJECT_STRUCTURE.md  index.md
frontend_react/: Dockerfile  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend_react/src/: App.tsx  main.tsx
m00_architecture_standards/: index.md  mfg_agentic_sdlc_standards.md
m00_prd/: scy_prd_part_3_neuron_chains.md  scy_prd_part_5_cosmos_modes.md  scy_prd_part_6_architecture_db.md
m01_ingestion_cores/c01_youtube_core/: index.md
m01_ingestion_cores/c02_web_article_core/: index.md
m01_ingestion_cores/c03_podcast_core/: index.md
m01_ingestion_cores/c04_academic_core/: index.md
m01_ingestion_cores/c05_google_drive_core/: index.md
m01_ingestion_cores/c06_financial_core/: index.md
m01_ingestion_cores/c07_twitter_core/: index.md
m01_ingestion_cores/c08_wikipedia_core/: index.md
m01_ingestion_cores/c09_science_core/: index.md
m01_ingestion_cores/c10_tiktok_core/: index.md
m01_ingestion_cores/c11_reddit_core/: index.md
m01_ingestion_cores/c12_epub_core/: index.md
m01_ingestion_cores/c13_anki_import_export/: index.md
m02_neuron_chains_apex_agent/: mfg_cosmos_document_synthesis_specs.md
m03_ascent_pipeline_agents/: scy_ascent_explain_2.md
m04_mfg_cosmos_visualization_engine/: scy_cosmos_architecture_v4_5.md
m06_mfg_brain_rag_assistant/: spec_and_patterns.md
m07_mfg_imprint_cognitive/: spec_and_patterns.md
m08_mfg_reader_suite/: spec_and_patterns.md
m11_neuroscientific_engine/: spec_and_patterns.md
m12_b2b_creator_console/: spec_and_patterns.md
minddoc/: index.md
s00_architecture_standards/: scy_agentic_vision_complete.md  scy_progressive_automation_spec.md
s00_design/: scy_apex_revision_simulator.html  scy_experience_design.md
s00_prd/: scy_prd_part_1_strategy.md  scy_prd_part_6_architecture_db.md  scy_sprint_0_db_init.sql
s01_ingestion_cores/: index.md
s05_apex_retention_system/: spec_and_patterns.md
s07_scy_imprint_cognitive/: spec_and_patterns.md
(+220 files in other folders)
