[package]
name = "scy-shared"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Types partagés, erreurs, helpers UUID v7 et config globale SCY Forge"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
